# internal/model/policy.go
@@ -1,0 +1,8 @@
+package model
+
+type Policy struct {
+	Name   string
+	Prefix string
+	Action string
+	Time   string
+}
