# openapi/openapi.yaml
@@ -4,34 +4,34 @@ info:
   title: This is just an example of User CRUD API
   version: 1.0.0
 paths:
-  /users:
+  /policies:
     get:
-      summary: List all users
+      summary: List all lifecycle policies
       responses:
         '200':
-          description: A list of users
+          description: List of policies
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Policy'
     post:
-      summary: Create a new user
+      summary: Create a new lifecycle policy
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Policy'
       responses:
         '201':
-          description: User created
+          description: Lifecycle policy created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-  /users/{id}:
+                $ref: '#/components/schemas/Policy'
+  /rules/{id}:
     get:
       summary: Get a user by ID
       parameters:
@@ -46,11 +46,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Policy'
         '404':
           description: User not found
     put:
-      summary: Update a user by ID
+      summary: Update a lifecycle policy by ID
       parameters:
         - name: id
           in: path
@@ -62,18 +62,18 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Policy'
       responses:
         '200':
           description: User updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Policy'
         '404':
           description: User not found
     delete:
-      summary: Delete a user by ID
+      summary: Delete a lifecycle policy by ID
       parameters:
         - name: id
           in: path
@@ -82,9 +82,9 @@ paths:
             type: string
       responses:
         '204':
-          description: User deleted
+          description: Lifecycle policy deleted
         '404':
-          description: User not found
+          description: Lifecycle policy not found
 components:
   schemas:
     Metadata:
@@ -101,18 +101,23 @@ components:
       required:
         - createdAt
         - createdBy
-    User:
+    Policy:
       type: object
       properties:
-        id:
-          type: string
         name:
           type: string
-        email:
+        prefix:
           type: string
+        action:
+          type: string
+        time:
+          type: string
+          description: Number of days or ISO8601 duration
         metadata:
-          $ref: '#/components/schemas/Metadata'
+          type: object
+          $ref: "#/components/schemas/Metadata"
       required:
-        - id
         - name
-        - email
+        - prefix
+        - action
+        - time
